--- a/teste01.html
+++ b/teste01.html
@@ -63,7 +63,7 @@
         </main>
         <footer>
 
-            <section class="sectionrodape">
+            <section class="sectiongitrodape">
 
                 <div class="rodape">
 
